--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 #POSTGRESS
-POSTGRES_PASSWORD=mypass
-POSTGRES_NAME=db
-POSTGRES_USER=wb_order
+POSTGRES_PASSWORD=
+POSTGRES_NAME=
+POSTGRES_USER=
+BOT_TOKEN=
