--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 #POSTGRESS
-POSTGRES_PASSWORD=
-POSTGRES_NAME=
-POSTGRES_USER=
-BOT_TOKEN=
+POSTGRES_PASSWORD=mypass
+POSTGRES_NAME=db
+POSTGRES_USER=wb_order
+BOT_TOKEN=5115669897:AAH9j-hyC_EUAI7nLwDcTjOuY2vDq4uncLY
