--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,7 @@ services:
     - go:/usr/src/app
     ports:
     - "8443:8443"
+    env_file: .env
   db:
     image: postgres
     container_name: btdb
