--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 #POSTGRESS
-POSTGRES_PASSWORD=mypass
+POSTGRES_PASSWORD=mypas
 POSTGRES_NAME=db
 POSTGRES_USER=wb_order
 BOT_TOKEN=5115669897:AAH9j-hyC_EUAI7nLwDcTjOuY2vDq4uncLY
