--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@
 POSTGRES_PASSWORD=mypas
 POSTGRES_NAME=db
 POSTGRES_USER=wb_order
-BOT_TOKEN=5115669897:AAH9j-hyC_EUAI7nLwDcTjOuY2vDq4uncLY
+BOT_TOKEN=
